# otus_hw_2

./: Dockerfile  README.md  alembic.ini  nginx-ingress.yaml  pyproject.toml
app/: main.py
app/migrations/: env.py
app/models/: user.py
app/schemas/: user.py
app/utils/: user.py
grafana/: dashboard.json
hw_2_chart/: Chart.yaml  values.yaml
hw_2_chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  job.yaml  service-monitor.yaml  service.yaml
postman_collection/: otus_hw_2.postman_collection.json
