[tool.poetry]
name = "otus_hw_2"
version = "0.1.0"
description = ""
authors = ["Volodina Elena <elena.volodina@zyfra.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
pydantic = {extras = ["email"], version = "^1.9.1"}
asyncpg = "^0.26.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
